# vrx-gazebo

./: .gitignore  README.md  add_obstacle.py  add_waypoint_spheres.py  check_nav2.py  fake_lidar.py  fix_obstacle.py  fix_obstacle_coords.py  fix_obstacle_definitivo.py  generate_synthetic_map.py  inject_estacas.py  patch_nav2.sh  patch_obstacle_height.sh  rebuild_estacas.py  rebuild_waypoint_spheres.py  remove_buoys.py  replace_posts.py  replace_posts_slalom.py  restart_rsp.launch.py  revert_lidar.sh  run_10_tests.py  run_all.sh  run_sim.sh  run_test.sh  test_sdf.py  test_tf.py  tracker.py
src/robmov_slam/: CMakeLists.txt  package.xml
src/robmov_slam/config/: ekf_config.yaml  mapper_params_online_async.yaml  nav2_params.yaml  update_params.py
src/robmov_slam/launch/: navigation_launch.py  slam_localization.launch.py
src/robmov_slam/src/: bathymetry_mapper.py  keyboard_listener.py  mission_coverage.py  software_bathymetry.py  twist2thrust.py
vrx/: README.md
vrx/vrx_gz/launch/: competition.launch.py
vrx/vrx_gz/models/seabed/: model.config  model.sdf
vrx/vrx_gz/src/vrx_gz/: model.py  payload_bridges.py
vrx/vrx_gz/worlds/: bathymetry.sdf
vrx/vrx_urdf/vrx_gazebo/config/wamv_config/: slam_sensors.yaml
vrx/vrx_urdf/wamv_gazebo/urdf/: macros.xacro  wamv_gazebo.urdf.xacro
vrx/vrx_urdf/wamv_gazebo/urdf/components/: wamv_3d_lidar.xacro  wamv_bathymetry.xacro
